--- a/vue3/package.json
+++ b/vue3/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "author": "",
   "scripts": {
-    "build": "cross-env webpack --mode production --progress",
-    "serve": "vue-cli-service serve",
-    "test:unit": "vue-cli-service test:unit",
-    "test:unit:ci": "vue-cli-service test:unit --coverage=true",
-    "lint": "eslint .",
-    "dev": "cross-env webpack --mode development --progress",
-    "watch": "cross-env webpack --mode development --watch"
+    "dev": "vite",
+    "build": "vite build",
+    "watch": "vite build --watch",
+    "test:unit": "vitest run",
+    "test:unit:ci": "vitest run --coverage",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
@@ -20,9 +19,9 @@
     "@vue-flow/core": "^1.26.0",
     "@vue-flow/minimap": "^1.2.0",
     "@vuepic/vue-datepicker": "^8.8.1",
-    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.3",
-    "primevue": "^3.48.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.1",
     "vue": "^3.4.18",
     "vue-chartjs": "^5.3.1",
     "vue-input-autowidth": "^1.0.11",
@@ -37,23 +36,21 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
-    "@vue/cli-service": "^5.0.8",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/compiler-sfc": "^3.5.21",
     "babel-jest": "^27.0.6",
-    "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^9.20.1",
-    "file-loader": "^6.2.0",
     "npm-force-resolutions": "^0.0.10",
+    "postcss": "^8.5.6",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
+    "vite": "^7.1.7",
     "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.82.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-cli": "^5.0.2"
   },
   "resolutions": {
     "ws": "^8.0.0"
